--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,10 @@ android {
     }
     signingConfigs {
         debug {
-           /* storeFile file(properties.getProperty("SIGNING_CONFINGS_DEBUG_STORE_FILE"))
+            storeFile file(properties.getProperty("SIGNING_CONFINGS_DEBUG_STORE_FILE"))
             storePassword properties.getProperty("SIGNING_CONFINGS_DEBUG_STORE_PASSWORD")
             keyAlias properties.getProperty("SIGNING_CONFINGS_DEBUG_KEY_ALIAS")
-            keyPassword properties.getProperty("SIGNING_CONFINGS_DEBUG_KEY_PASSWORD")*/
+            keyPassword properties.getProperty("SIGNING_CONFINGS_DEBUG_KEY_PASSWORD")
         }
         release {
             storeFile file(properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_FILE"))
@@ -78,11 +78,13 @@ android {
             minifyEnabled false
             zipAlignEnabled false
             shrinkResources false
+            signingConfig signingConfigs.debug
         }
         release {
             minifyEnabled false
             zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
 
        /* // 多个变体自定义输出配置
@@ -105,7 +107,11 @@ android {
 
         android.applicationVariants.all { variant ->
             variant.outputs.all {
-                outputFileName = "ccf_V${defaultConfig.versionName}_${generateTime()}_debug.apk"
+                if(variant.buildType.name=="debug"){
+                    outputFileName = "ccf_V${defaultConfig.versionName}_${generateTime()}_debug.apk"
+                }else if(variant.buildType.name=="release"){
+                    outputFileName = "ccf_V${defaultConfig.versionName}_${generateTime()}_release.apk"
+                }
             }
         }
     }
