--- a/app/build.gradle
+++ b/app/build.gradle
@@ -229,21 +229,27 @@ dependencies {
     /**
      *   zxing 制作二维码
      */
+
     /**
      * lite-orm数据库存储
      */
+
     /**
      * RecycleView
      */
+
     /**
      * 省市县三级联动
      */
+
     /**
      *   MVCHelper 核心类库
      */
+
     /**
      * Retrofit+Rxjava+Gson
      */
+
     /**
      * HelloCharts
      */
@@ -273,15 +279,12 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'liji.library.dev:citypickerview:2.0.1'
     compile 'com.shizhefei:MVCHelper-Library:1.3.2'
-
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
     compile 'com.google.code.gson:gson:2.6.2'
-
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
-
-
+    implementation project(':library')
 }
