--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,7 +84,8 @@
         <activity
             android:name=".activity.LoginRegisterActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"
+            android:launchMode="singleTask"/>
         <!-- 忘记密码页面 -->
         <activity
             android:name=".activity.ForgetPasswordActivity"
