完成选择挂卖中的购买，购买碳控因子提交订单跳转到订单中心, 完成挂买中的出售，出售碳控因子提交订单跳转到订单中心 订单中心凭证的显示，双击放大，点击跳转界面显示大图

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -452,11 +452,17 @@
             android:name=".activity.HangBuyAndSellRecordActivity"
             android:screenOrientation="portrait"
             android:theme="@style/PopupMenuTheme" />
-        <!--购买碳控因子-->
-        <activity android:name=".activity.PurCCFActivity"
+        <!-- 购买碳控因子 -->
+        <activity
+            android:name=".activity.PurCCFActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/NormalFullScreen"
-            />
+            android:theme="@style/NormalFullScreen" />
+        <!-- 出售碳控因子 -->
+        <activity
+            android:name=".activity.SellCCFActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/NormalFullScreen" />
+        <activity android:name=".activity.PreviewSaveActivity"></activity>
     </application>
 
 </manifest>
