--- a/app/build.gradle
+++ b/app/build.gradle
@@ -299,4 +299,6 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    //图片缩放控件
+    compile 'com.bm.photoview:library:1.4.1'
 }
