--- a/app/build.gradle
+++ b/app/build.gradle
@@ -289,7 +289,7 @@ dependencies {
     compile 'liji.library.dev:citypickerview:2.0.1'
     compile 'com.shizhefei:MVCHelper-Library:1.3.2'
     compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
     compile 'com.github.huzhenjie:ImageSelector:1.0.3'
 
     //分包设置
