--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,8 @@
         android:icon="@mipmap/ccf"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/FullScreen">
+        android:theme="@style/FullScreen"
+        android:resizeableActivity="false">
         <activity
             android:name=".activity.MainPageActivity"
             android:screenOrientation="portrait"
