--- a/app/build.gradle
+++ b/app/build.gradle
@@ -298,4 +298,8 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
     //图片缩放控件
     compile 'com.bm.photoview:library:1.4.1'
+    //滑轮控件
+    compile 'com.wx.wheelview:wheelview:1.3.3'
+    //cardview 卡片式view
+    compile 'com.android.support:cardview-v7:26.1.0'
 }
