--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -475,6 +475,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/PopupMenuTheme"
             />
+        <!--留言记录-->
+        <activity android:name=".activity.LeaveMessageRecordActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/PopupMenuTheme"
+            />
     </application>
 
 </manifest>
